# Boat-Detector

./: README.md
Code/: CMakeLists.txt  boatDetector.cpp
Code/KaggleImg/: kaggleImg01.txt  kaggleImg02.txt  kaggleImg03.txt  kaggleImg04.txt  kaggleImg05.txt  kaggleImg06.txt  kaggleImg07.txt  kaggleImg08.txt  kaggleImg09.txt  kaggleImg10.txt
Code/OtherExamples/: boat01.txt  boat02.txt  boat03.txt  boat04.txt  boat05.txt  boat06.txt  boat07.txt  boat08.txt  boat09.txt  boat10.txt  water01.txt  water02.txt  water03.txt  water04.txt  water05.txt  water06.txt
Code/SupportClasses/: Codebook.cpp  Codebook.h  Graph.cpp  Graph.h
Code/VeniceImg/: veniceImg01.txt  veniceImg02.txt  veniceImg03.txt  veniceImg04.txt  veniceImg05.txt  veniceImg06.txt  veniceImg07.txt  veniceImg08.txt  veniceImg09.txt  veniceImg10.txt  veniceImg11.txt  veniceImg12.txt
